# Multi-source-Integrative-Progressive-Target-Discovery-Framework

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CN.md  environment.lock.yml  environment.yml  pyproject.toml
doc/: README.md  Single_CAS_Figure1_Pipeline.md  包功能与使用说明.md  单CAS_Figure1分析流程说明.md
scripts/: analyze_chemprop_predictions.py  build_case_sources.py  build_chembl_target_catalog.py  build_chemprop_targets_from_kegg.py  build_figure1.py  build_idmapping_tsv.R  evaluate_chemprop_model.py  fetch_chembl_targets.py  fetch_ppb2_targets.py  fetch_sea_targets.py  fetch_swiss_targets.py  install_miptd.sh  plot_figure1e.py  predict_targets.R  prepare_chemprop_data.py  run_figure1_bcd.R  run_kegg_enrichment.R  train_chemprop_multitask.py
src/miptd/: cli.py  config.py  discovery.py  models.py  pipeline.py  utils.py  validate.py
src/miptd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/miptd/resources/: ChEMBL_target_catalog.csv  ChEMBL_target_catalog.summary.json  idmapping.tsv
tests/: test_cli_pipeline.py  test_discovery.py  test_fetch_chembl_targets.py  test_fetch_ppb2_targets.py  test_fetch_sea_targets.py  test_fetch_swiss_targets.py  test_prepare_chemprop_data.py  test_train_chemprop_multitask.py  test_validate.py
